--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Chat</title>
+  <link rel="stylesheet" type="text/css" href="../css/indexstyle.css">
 </head>
 <body>
   <div id="chat"></div>
