--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,7 @@
     <input type="submit"></input>
   </form>
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script src="/socket.io/socket.io.js"></script>  
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="js/functionality.js"></script>  
 </body>
 </html>
